--- a/_Imports.razor
+++ b/_Imports.razor
@@ -1,5 +1,6 @@
 ﻿@using Blazorise
 @using Blazorise.LoadingIndicator
+@using Blazorise.Components
 @using System.Net.Http
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
