--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">LRSIceRink</a>
+        <a class="navbar-brand" href="">Ice Rink Operations</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,6 +22,11 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="sharpening">
                 <span class="oi oi-plus" aria-hidden="true"></span> Sharpening
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="reports">
+                <span class="oi oi-plus" aria-hidden="true"></span> Skate Status & History
             </NavLink>
         </div>
         <div class="nav-item px-3">
