--- a/Pages/SkateAdmin.razor
+++ b/Pages/SkateAdmin.razor
@@ -1,5 +1,5 @@
 ﻿@page "/skateAdmin"
-@attribute [Authorize(Roles = "GlobalAdmin, Operator")]
+@attribute [Authorize(Roles = "GlobalAdmin, SkateAdmin")]
 @using LRSIceRink.Data
 @using Microsoft.EntityFrameworkCore
 @using System.Security.Claims
