--- a/Pages/CheckOut.razor
+++ b/Pages/CheckOut.razor
@@ -82,8 +82,8 @@
         {
             if (Context is not null)
             {
-                //Get all skates
-                _skates = await Context.Skates.OrderBy(s=>s.Name).ToListAsync();
+                //Get all non-archived skates
+                _skates = await Context.Skates.Where(s=> !s.IsArchived).OrderBy(s=>s.Name).ToListAsync();
                 //Get global properties
                 _properties = await Context.Properties.ToListAsync();
             }
