--- a/Pages/SkateReports.razor
+++ b/Pages/SkateReports.razor
@@ -88,8 +88,8 @@
 
         if (Context is not null)
         {
-            //Get all skates
-            _skates = await Context.Skates.OrderBy(s=>s.Name).ToListAsync();
+            //Get all non-archived skates
+            _skates = await Context.Skates.Where(s=> !s.IsArchived).OrderBy(s=>s.Name).ToListAsync();
             //Get global properties
             _properties = await Context.Properties.ToListAsync();
             _maxUsageMinutes = Double.Parse(_properties.Find(p => p.Name == "MaxSkateUsageMinutes")?.Value ?? "0");
