--- a/Pages/SkateReports.razor
+++ b/Pages/SkateReports.razor
@@ -26,7 +26,22 @@
                     @foreach(var skate in _skates.Where(s => (string.IsNullOrEmpty(_search) || s.Name.Contains(_search)))) {
                         <TableRow Clicked="async () => await ShowSkateAuditHistory(skate)">
                             <TableRowHeader>@skate.Name</TableRowHeader>
-                            <TableRowCell>@skate.Status.ToString()</TableRowCell>
+                            <TableRowCell>
+                                @switch (skate.Status)
+                                {
+                                    case SkateStatus.InUse:
+                                        <Badge Color="Color.Info" Pill >Checked Out</Badge>
+                                        break;
+
+                                    case SkateStatus.Available:
+                                        <Badge Color="Color.Success" Pill>Available</Badge>
+                                        break;
+
+                                    case SkateStatus.BeingSharpened:
+                                        <Badge Color="Color.Secondary" Pill>Being Sharpened</Badge>
+                                        break;
+                                }
+                            </TableRowCell>
                             <TableRowCell>@($"{(skate.MinutesUsed / 60):0.## hours}")</TableRowCell>
                         </TableRow>
                     }
