--- a/Pages/SkateReports.razor
+++ b/Pages/SkateReports.razor
@@ -17,7 +17,7 @@
     @if (_hasLoaded)
     {
         <Field>
-            <TextEdit Placeholder="Search for skate..." @bind-Text="_search"/>
+            <TextEdit Placeholder="Search for skate..." @bind-Text="_search" Immediate="true" />
         </Field>
 
         @if(_skates is not null) {
