--- a/Pages/SkateSharpening.razor
+++ b/Pages/SkateSharpening.razor
@@ -14,7 +14,7 @@
     @if (_hasLoaded)
     {
         <Field>
-            <TextEdit Placeholder="Search for skate..." @bind-Text="_search"/>
+            <TextEdit Placeholder="Search for skate..." @bind-Text="_search" Immediate="true" />
         </Field>
 
         @if(_skates is not null) {
